Fix PR job
Change-Id: I4f9f4a2bbd83b4f8f407b8d60e99e06ae7e0ef9b